--- a/index.html
+++ b/index.html
@@ -416,10 +416,8 @@
         <h2 class="section-title">Мои Проекты</h2>
         <div class="projects-grid">
             <a href="#" class="project-card">
-                <div class="project-icon"><i class="fas fa-laptop-code"></i></div>
-                <div class="project-title">Корпоративный сайт</div>
-                <div class="project-description">Разработка дизайна и верстка современного корпоративного сайта с адаптивным дизайном</div>
-                <div class="project-placeholder">Здесь будет изображение проекта</div>
+                <div class="project-title">Диалог</div>
+                <div class="project-placeholder">project 1</div>
             </a>
             
             <a href="#" class="project-card">
