--- a/index.html
+++ b/index.html
@@ -726,6 +726,38 @@
                         </div>
                     </div>
                 </a>
+                 <a href="projects/project 13" class="project-card fade-in">
+                    <div class="project-header">
+                        <div class="project-icon">
+                            <i class="fas fa-envelope"></i>
+                        </div>
+                        <div class="project-title">Сайт достопримечательности</div>
+                    </div>
+                    <div class="project-body">
+                        <p class="project-description">Сайт с основными компонентами</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">HTML5</span>
+                            <span class="tech-tag">CSS3</span>
+                        </div>
+                    </div>
+                </a>
+                 <a href="projects/project 14" class="project-card fade-in">
+                    <div class="project-header">
+                        <div class="project-icon">
+                            <i class="fas fa-coins"></i>
+                        </div>
+                        <div class="project-title">Bloom & Joy</div>
+                    </div>
+                    <div class="project-body">
+                        <p class="project-description">Сайт для цветочного магазина с онлайн доставкой</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">HTML5</span>
+                            <span class="tech-tag">CSS3</span>
+                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">Bootstrap5</span>
+                        </div>
+                    </div>
+                </a>
             </div>
         </section>
         
