--- a/index.html
+++ b/index.html
@@ -729,12 +729,12 @@
                      <a href="projects/project 13" class="project-card fade-in">
         <div class="project-header">
             <div class="project-icon">
-                <i class="fas fa-landmark"></i> <!-- Иконка достопримечательности -->
+                <i class="fas fa-landmark"></i> 
             </div>
-            <div class="project-title">Visit Paris - Сайт о Париже</div> <!-- Измененное название -->
+            <div class="project-title">Visit Paris - Сайт о Париже</div> 
         </div>
         <div class="project-body">
-            <p class="project-description">Сайт с информацией о достопримечательностях Парижа</p> <!-- Обновленное описание -->
+            <p class="project-description">Сайт с информацией о достопримечательностях Парижа</p> 
             <div class="project-tech">
                 <span class="tech-tag">HTML5</span>
                 <span class="tech-tag">CSS3</span>
@@ -744,7 +744,7 @@
                 <a href="projects/project 14" class="project-card fade-in">
     <div class="project-header">
         <div class="project-icon">
-            <i class="fas fa-seedling"></i> <!-- Иконка растения/цветка -->
+            <i class="fas fa-seedling"></i> 
         </div>
         <div class="project-title">Bloom & Joy</div>
     </div>
