--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
             <div class="project-icon">
                 <i class="fas fa-landmark"></i> 
             </div>
-            <div class="project-title">Visit Paris - Сайт о Париже</div> 
+            <div class="project-title">Сайт о Париже</div> 
         </div>
         <div class="project-body">
             <p class="project-description">Сайт с информацией о достопримечательностях Парижа</p> 
