--- a/index.html
+++ b/index.html
@@ -758,6 +758,22 @@
         </div>
     </div>
 </a>
+                <a href="projects/project 15" class="project-card fade-in">
+    <div class="project-header">
+        <div class="project-icon">
+            <i class="fas fa-ticket-alt"></i> 
+        </div>
+        <div class="project-title">Concert</div>
+    </div>
+    <div class="project-body">
+        <p class="project-description">Сайт для бронирования билетов</p>
+        <div class="project-tech">
+            <span class="tech-tag">HTML5</span>
+            <span class="tech-tag">CSS3</span>
+            <span class="tech-tag">React</span>
+        </div>
+    </div>
+</a>
             </div>
         </section>
         
